force-app/main/default/objects/OpportunityLineItem/fields/ACV_Total_Price_Bookings__c.field-meta.xml
<CustomField>
    <fullName>ACV_Total_Price_Bookings__c</fullName>
    <formula>IF(
Is_ACV__c = false,
0,
If(
(Opportunity.License_Term__c &lt; 12  &amp;&amp;  Opportunity.CloseDate&lt;DATEVALUE($Label.Annualize_ACV_Date)) || TotalPrice = 0,
TotalPrice,
(TotalPrice / Opportunity.License_Term__c) * 12
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Total Price Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>