force-app/main/default/objects/OpportunityLineItem/fields/Annual_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Unit_Price__c</fullName>
    <formula>IF(
    Created_From_Quote__c = True,
    SBQQ__QuoteLine__r.SBQQ__ListPrice__c - (SBQQ__QuoteLine__r.SBQQ__ListPrice__c * Quote_Line_Discount__c),
    ListPrice  - ( ListPrice  *  Quote_Line_Discount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>