force-app/main/default/objects/OpportunityLineItem/fields/Copy_of_List_Price_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_List_Price_at_Closing__c</fullName>
    <description>Copies the list price at Closing or any Closed stage.</description>
    <label>[DON&apos;T USE]Copy of List Price at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>