force-app/main/default/objects/OpportunityLineItem/fields/Created_From_NS__c.field-meta.xml
<CustomField>
    <fullName>Created_From_NS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From NS</label>
    <type>Checkbox</type>
</CustomField>