force-app/main/default/objects/OpportunityLineItem/fields/Deal_Reg_Discount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applies 25% deal reg discount to total discount</description>
    <inlineHelpText>Applies 25% deal reg discount to total discount</inlineHelpText>
    <label>Deal Reg Discount</label>
    <type>Checkbox</type>
</CustomField>