force-app/main/default/objects/OpportunityLineItem/fields/Entity_Code_for_NS__c.field-meta.xml
<CustomField>
    <fullName>Entity_Code_for_NS__c</fullName>
    <formula>IF(ISBLANK(Opportunity.Reseller__c),
  &quot;&quot;,
  IF(Opportunity.Reseller__r.Tax_Exempt__c,
    &quot;G&quot;,
    &quot;&quot;
))</formula>
    <label>Entity Code for NS</label>
    <type>Text</type>
</CustomField>