force-app/main/default/objects/OpportunityLineItem/fields/Express_Annual_Discount__c.field-meta.xml
<CustomField>
    <fullName>Express_Annual_Discount__c</fullName>
    <label>Express Annual Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>