force-app/main/default/objects/OpportunityLineItem/fields/Express_Selected_Discount__c.field-meta.xml
<CustomField>
    <fullName>Express_Selected_Discount__c</fullName>
    <description>Holds the discount given in the Add Products page(Commercial), can retire this once we get rid of the Add products page.</description>
    <label>Express Selected Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>