force-app/main/default/objects/OpportunityLineItem/fields/First_invoice_line_amount__c.field-meta.xml
<CustomField>
    <fullName>First_invoice_line_amount__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Opportunity.Selected_Payment_Type__c,&apos;Upfront Payments&apos;)),
ROUND((TotalPrice/Opportunity.NS_Recurrence_Count__c ),2),
TotalPrice)</formula>
    <label>First invoice line amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>