force-app/main/default/objects/OpportunityLineItem/fields/Historical_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Historical_Line_Id__c</fullName>
    <description>Keeps record of the counterpart when migrating from old SKUs to new SKUs</description>
    <label>Historical Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>