force-app/main/default/objects/OpportunityLineItem/fields/HM_Amount__c.field-meta.xml
<CustomField>
    <fullName>HM_Amount__c</fullName>
    <formula>IF(CONTAINS( Product_Code_Copy__c , &apos;HM&apos;), TotalPrice , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HM Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>