force-app/main/default/objects/OpportunityLineItem/fields/Is_Accessory__c.field-meta.xml
<CustomField>
    <fullName>Is_Accessory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Accessory?</label>
    <type>Checkbox</type>
</CustomField>