force-app/main/default/objects/OpportunityLineItem/fields/Is_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Is_Hardware__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hardware?</label>
    <type>Checkbox</type>
</CustomField>