force-app/main/default/objects/OpportunityLineItem/fields/License_Term_Copy__c.field-meta.xml
<CustomField>
    <fullName>License_Term_Copy__c</fullName>
    <description>Deprecated: Copy License Term to enable rollup and formulas on oppty.</description>
    <label>License Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>