force-app/main/default/objects/OpportunityLineItem/fields/Monthly_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_Price__c</fullName>
    <formula>IF( ListPrice  = 0, 0, 
 IF(Is_Hardware__c  = TRUE, (Annual_Unit_Price__c /License_Term_Copy__c), 
  IF (Is_Hardware__c = FALSE, (Annual_Unit_Price__c / 12), 0) 
 ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>