force-app/main/default/objects/OpportunityLineItem/fields/Net_Unit_Price_Delta__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Price_Delta__c</fullName>
    <label>Net Unit Price Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>