force-app/main/default/objects/OpportunityLineItem/fields/netsuite_conn__Item_Category__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Item_Category__c</fullName>
    <label>Item Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>