force-app/main/default/objects/OpportunityLineItem/fields/New_VG34_EU__c.field-meta.xml
<CustomField>
    <fullName>New_VG34_EU__c</fullName>
    <formula>AND ( 
Product_Code_Copy__c = &quot;HW-VG34-EU&quot;, 
DATEVALUE( Opportunity.Went_to_Closed_Won_Date__c) &gt;= DATE(2019,03,04) 
)</formula>
    <inlineHelpText>This is to track which opportunities have a new HW-VG34-EU</inlineHelpText>
    <label>New VG34-EU</label>
    <type>Checkbox</type>
</CustomField>