force-app/main/default/objects/OpportunityLineItem/fields/NS_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>NS_Unit_Rate__c</fullName>
    <formula>UnitPrice  * (1-Discount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Unit Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>