force-app/main/default/objects/OpportunityLineItem/fields/Opp_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Name__c</fullName>
    <description>Used by DLRS criteria.</description>
    <formula>TEXT(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Stage Name</label>
    <type>Text</type>
</CustomField>