force-app/main/default/objects/OpportunityLineItem/fields/Product_Code_Copy__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Copy__c</fullName>
    <description>Copy of Product Code to enable rollup summaries etc.</description>
    <label>Product Code Copy</label>
    <length>64</length>
    <type>Text</type>
</CustomField>