force-app/main/default/objects/OpportunityLineItem/fields/Product_Type_Copy__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Copy__c</fullName>
    <description>Copies in the OpportunityHelper class, called in the beforetrigger.</description>
    <label>Product Type Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>