force-app/main/default/objects/OpportunityLineItem/fields/Promotional_Product__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this line item will not affect the blended discount formulas or List Price rollup. Should only be checked via process builder.</description>
    <label>Promotional Product?</label>
    <type>Checkbox</type>
</CustomField>