force-app/main/default/objects/OpportunityLineItem/fields/Purchased_From_Trial__c.field-meta.xml
<CustomField>
    <fullName>Purchased_From_Trial__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This marks how many units were actually purchased from the trial by a revenue opportunity that&apos;s being closed.</description>
    <label>Purchased From Trial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>