force-app/main/default/objects/OpportunityLineItem/fields/Quote_Line_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Discount__c</fullName>
    <formula>/*ROUND((SBQQ__QuoteLine__r.SBQQ__TotalDiscountRate__c),2)*/

SBQQ__QuoteLine__r.SBQQ__TotalDiscountRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field holds the associated quote line item discount.</inlineHelpText>
    <label>Quote Line Discount (CPQ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>