force-app/main/default/objects/OpportunityLineItem/fields/Related_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_Order_Number__c</fullName>
    <formula>Opportunity.Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Order Number</label>
    <type>Text</type>
</CustomField>