force-app/main/default/objects/OpportunityLineItem/fields/Replacement__c.field-meta.xml
<CustomField>
    <fullName>Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabling non-0 hardware purchasing</inlineHelpText>
    <label>Replacement</label>
    <type>Checkbox</type>
</CustomField>