force-app/main/default/objects/OpportunityLineItem/fields/Sales_Tax_Log__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Log__c</fullName>
    <description>To Capture Log Details from Vertex</description>
    <label>Sales Tax Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>