force-app/main/default/objects/OpportunityLineItem/fields/Selected_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Selected_Sales_Price__c</fullName>
    <description>Price that the user manually selected for the product line (otherwise it is just the suggested price).</description>
    <label>Monthly Price per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>