force-app/main/default/objects/OpportunityLineItem/fields/Ship_From_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Location__c</fullName>
    <description>Where is the product line for the oppty being shipped from.</description>
    <label>Ship From Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>