force-app/main/default/objects/OpportunityLineItem/fields/Ship_To_Address_Concatenated__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_Concatenated__c</fullName>
    <label>Ship To Address (Concatenated)</label>
    <type>TextArea</type>
</CustomField>