force-app/main/default/objects/OpportunityLineItem/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <description>Destination Country, used to calculate tax in Vertex</description>
    <formula>TEXT( Ship_To__r.Shipping_Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Country</label>
    <type>Text</type>
</CustomField>