force-app/main/default/objects/OpportunityLineItem/fields/Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Quantity__c</fullName>
    <description>Number shipped</description>
    <label>Shipped Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>