force-app/main/default/objects/OpportunityLineItem/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <formula>TEXT(Opportunity.Shipping_Carrier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Carrier</label>
    <type>Text</type>
</CustomField>