force-app/main/default/objects/OpportunityLineItem/fields/Suggested_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Line_Price__c</fullName>
    <description>Displays Suggested Sales Price * License Term for new licenses and Suggested Sales Price for hardware.</description>
    <formula>IF(LEFT(Product_Code_Copy__c,3)=&quot;LIC&quot;,Suggested_Sales_Price__c*License_Term_Copy__c,Suggested_Sales_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>