force-app/main/default/objects/OpportunityLineItem/fields/To_Purchase_From_Trial__c.field-meta.xml
<CustomField>
    <fullName>To_Purchase_From_Trial__c</fullName>
    <description>This stores the rep&apos;s preference for how many units should be purchased from this line by the revenue opportunity. Then Order Operations admins can review and accept.</description>
    <label>To Purchase From Trial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>