force-app/main/default/objects/OpportunityLineItem/fields/Total_Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Price__c</fullName>
    <formula>Annual_Unit_Price__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>