force-app/main/default/objects/OpportunityLineItem/fields/Total_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Total_Dimensions__c</fullName>
    <formula>ABS(PricebookEntry.Product2.Dimensions_cm3__c * Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Dimensions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>