force-app/main/default/objects/OpportunityLineItem/fields/Total_Weight_oz__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_oz__c</fullName>
    <formula>ABS(PricebookEntry.Product2.Weight_oz__c * Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight (oz)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>