force-app/main/default/objects/OpportunityLineItem/fields/Trial_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Trial_Order_Number__c</fullName>
    <label>Trial Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>