force-app/main/default/objects/OpportunityLineItem/fields/Trial_Status__c.field-meta.xml
<CustomField>
    <fullName>Trial_Status__c</fullName>
    <label>Trial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>