force-app/main/default/objects/OpportunityLineItem/validationRules/Deal_Reg_Discount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Deal_Reg_Discount_Validation</fullName>
    <active>false</active>
    <description>(Deprecated)</description>
    <errorConditionFormula>AND(NOT( ISPICKVAL(Opportunity.LeadSource , &quot;Deal Reg form&quot;)),  Deal_Reg_Discount__c = True)</errorConditionFormula>
    <errorMessage>Deal Reg Discount can only be checked for partner-registered opportunities</errorMessage>
</ValidationRule>