force-app/main/default/objects/OpportunityLineItem/validationRules/List_Price_Equals_Sale_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>List_Price_Equals_Sale_Price</fullName>
    <active>false</active>
    <errorConditionFormula>ListPrice   &lt;&gt;   UnitPrice</errorConditionFormula>
    <errorDisplayField>ServiceDate</errorDisplayField>
    <errorMessage>Sales Price must equal List Price. To adjust total price, enter Discount as a percentage.</errorMessage>
</ValidationRule>