force-app/main/default/objects/OpportunityLineItem/validationRules/No_Discount_WIFI_SKU.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Discount_WIFI_SKU</fullName>
    <active>false</active>
    <description>Prevents AE&apos;s from putting in a discount on any WIFI</description>
    <errorConditionFormula>AND(
     Product_Code_Copy__c = &quot;LIC-WIFI-DATA&quot;,
    Discount &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>Discount on WIFI-DATA must be 0%</errorMessage>
</ValidationRule>